clamp timeline time for highlighted desktop

BUG: 327539
FIXED-IN: 4.11.4